# opencode_test

./: .env.example  .gitignore  PR_DESCRIPTION.md  README.md  context.md  pyproject.toml  requirements.txt
.opencode/: project_hooks.json  rules.md
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  alerts.py  auth.py  health.py  risk.py
app/core/config/: settings.py
app/core/security/: __init__.py  jwt.py  password.py
app/database/: postgresql.py  redis.py
app/ml/: feature_extractor.py
app/ml/inference/: __init__.py  predictor.py
app/ml/models/: lstm_model.py
app/ml/training/: trainer.py
app/notifications/channels/: __init__.py  email.py  sms.py
app/notifications/templates/: __init__.py
app/schemas/: admin.py  alert.py  risk.py  token.py  user.py
app/services/: alert_service.py  auth_service.py  risk_service.py
app/tasks/: __init__.py  alert_tasks.py  celery_app.py  model_tasks.py  statistics_tasks.py
app/utils/: device_fingerprint.py  ip_geo.py
config/: settings.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api_documentation.md
tests/api/: test_auth.py  test_risk.py
tests/ml/: __init__.py  test_lstm_model.py
